--- a/src/main/webapp/WEB-INF/views/customer/list.html
+++ b/src/main/webapp/WEB-INF/views/customer/list.html
@@ -20,8 +20,14 @@
             <span th:text="${message}"></span>
         </div>
     </div>
+    <div style="margin-bottom: 10px; margin-left: 110px">
+        <form th:action="@{/customers/search}" method="get">
+            <label><input type="text" name="search"></label>
+            <button type="submit" class="btn btn-primary">Search</button>
+        </form>
+    </div>
     
-    <table id = "customers">
+    <table id="customers">
         <thead>
             <tr>
                 <th>STT</th>
@@ -43,6 +49,10 @@
             </tr>
         </tbody>
     </table>
-    <footer th:replace="/layout :: footer"></footer>
+    <a class="btn btn-primary" th:if="${customers.hasPrevious()}"
+       th:href="@{/customers(page=${customers.number - 1})}">Previous</a>
+    <span th:text="${customers.number + 1}"></span> | <span th:text="${customers.totalPages}"></span>
+    <a class="btn btn-primary" th:if="${customers.hasNext()}"
+       th:href="@{/customers(page=${customers.number + 1})}">Next</a>
 </body>
 </html>
